# odoo-ai-assistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-app.txt
.github/workflows/: ci.yml
data/: sources.json
docs/: 1_decisions_plan.md  2_project_summary.md  3_reflections.md  4_future_improvements.md  5_local_deploy.md  6_cloud_deploy.md
infrastructure/: .dockerignore  Dockerfile.pipeline  README.md  app.py  cdk.context.json  cdk_stack.py  lambda_pipeline.py  requirements-lambda.txt
scripts/: list_models.py
src/odoo_rag/: __init__.py  app.py  generate_qa.py  indexer.py  ingest.py  llm.py  retriever.py
tests/: README.md  test_app.py  test_indexer.py  test_ingest.py  test_llm.py  test_retriever.py
